[project]
name = "prober"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".codex/skills/",
    ]

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["prober"]
force-single-line = true
combine-as-imports = false

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
